--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "md5": "^2.0.0",
     "moment": "^2.10.6",
     "mysql": "^2.9.0",
+    "node-schedule": "^0.6.0",
     "redis": "^2.1.0",
     "request": "^2.65.0",
     "restify": "^4.0.3"
