--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-schedule": "^0.6.0",
     "redis": "^2.1.0",
     "request": "^2.65.0",
-    "restify": "^4.0.3"
+    "restify": "^4.0.3",
+    "rongcloud-sdk": "^1.0.3"
   }
 }
